Change log
==========

1.19 (unreleased)
-----------------


1.18 (2017-05-29)
-----------------
- added tox configuration to do PEP-8 checking cia ``flake8``
- PEP 8 code cleanup


1.17 (2017-05-27)
-----------------
- If output folders don't exist yet create them instead of failing.
- Use the name ``development`` instead of ``trunk`` or ``head`` to
  designate the current development version in the rendered index page.
- If a version control URL does not specify which version control
  system is used, `Git` is now used as default instead of `Subversion`.
- Moved the repository to GitHub and its documentation to ReadTheDocs


1.16 (2014-11-25)
-----------------
- added flag ``-c``/``--copy-output`` which will copy instead of link
  all HTML output into the folder designated as HTML output folder.


1.15 (2014-11-21)
-----------------
- switched documentation to point to the new Git repository
- use new bootstrap.py script


1.14 (2011-11-29)
-----------------
- Add a flag ``-m``/``--max-tags`` to set the number of package
  versions (tags) to be shown on the generated main page. If more
  tags exist, a link to a separate page is provided that shows all
  versions.


1.13 (2011-10-31)
-----------------
- Catch additional errors upon building
- Ignoring empty tag lists when asking Git for tags


1.12 (2011-08-30)
-----------------
- Be more resilient when simple ReST text compilation or 
  Sphinx building fails. Now the whole documentation build 
  process won't just fail at that point.
- provide more meaningful log messages when running with 
  the ``-v`` option.


1.11 (2011-08-09)
-----------------
- Now you can use ``Git`` alongside ``Mercurial`` and 
  ``Subversion`` to use as version control system.


1.10 (2011-08-09)
-----------------
- Taking more control of logging by defining our own logger and
  suppressing standard Sphinx log output. The new script flag 
  ``-v`` or ``--verbose`` enables the user to determine what to 