@@ -1,0 +1,3 @@
+[bdist_wheel]
+universal=1
+
